--- a/index.html
+++ b/index.html
@@ -41,74 +41,83 @@
         </div>
         
         <!-- filtres -->
-        <div class="row">
-            <div id="ingredient-div" class="mt-2 col-2 pb-0">
-                <button id="ingredients-button" class="btn btn-primary py-3 filtre-div" onclick="openFilterDivs('Ingredient',2,8)">Ingrédient <img class="ms-5" src="assets/icons/menu-closed.svg"></button>
-                <div id="ingredients-input" class="row not_display last_displayed ms-1">
-                    <div class="col-6 bg-primary">
-                        <div class="row bg-primary">
-                            <div class="col-10 p-0">
-                                <input type="text" class="bg-primary text-white py-3 filtre-open" placeholder="Rechercher un ingrédient">
+        <div class="container">
+            <div class="row">
+                <div class="lost_displayed">
+                    <div class="row w-75">
+                        <div id="ingredient-div" class="mt-2 col-2 pb-0 me-1">
+                            <div id="ingredients-button" class="row">
+                                <button id="ingredient-button-open" class="btn btn-primary py-3 filtre-div" onclick="openFilterDivs('Ingredient',2,6)">Ingrédient <img class="ms-5" src="assets/icons/menu-closed.svg" alt="Open Menu"></button>
                             </div>
-                            <div class="col-2 p-0">
-                                <button class="btn btn-primary py-3 filtre-open" onclick="closeFilterDivs('Ingredient',2,8)"><img src="assets/icons/menu-opened.svg"></button>
+                            <div id="ingredients-input" class="row not_display last_displayed">
+                                <div class="col-12 bg-primary">
+                                    <div class="row bg-primary">
+                                        <div class="col-10 p-0">
+                                            <input id="ingredient-input" name="ingredient-input" type="text" class="bg-primary text-white py-3 filtre-open" placeholder="Rechercher un ingrédient">
+                                        </div>
+                                        <div class="col-2 p-0">
+                                            <button id="ingredient-button-close" class="btn btn-primary py-3 filtre-open" onclick="closeFilterDivs('Ingredient',2,6)"><img src="assets/icons/menu-opened.svg" alt="Close Menu"></button>
+                                        </div>
+                                    </div>
+                                    <div id="ingredients-fields" class="row not_display">
+                                        <div class="col">
+                                            <div id="filtre-ingredients" class="row btn-group"></div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-
                         </div>
-                        <div id="ingredients-fields" class="row not_display">
-                            <div class="col">
-                                <div id="filtre-ingredients" class="row btn-group"></div>
+                        <div id="appareil-div" class="mt-2 col-2 pb-0 mx-1">
+                            <div id="appareils-button" class="row">
+                                <button id="appareil-button-open" class="btn btn-success py-3 filtre-div" onclick="openFilterDivs('Appareil',2,2)">Appareil <img class="ms-5" src="assets/icons/menu-closed.svg" alt="Open Menu"></button>
                             </div>
+                            <div id="appareils-input" class="row not_display last_displayed">
+                                <div class="col bg-success">
+                                    <div class="row me-0 bg-success">
+                                        <div class="col-10 p-0">
+                                            <input id="appareil-input" name="appareil-input" type="text" class="bg-success text-white py-3 filtre-open" placeholder="Rechercher un appareil">
+                                        </div>
+                                        <div class="col-2 p-0">
+                                            <button id="appareil-button-close" class="btn btn-success py-3 filtre-open" onclick="closeFilterDivs('Appareil',2,2)"><img src="assets/icons/menu-opened.svg" alt="Close Menu"></button>
+                                        </div>
+                                    </div>
+                                    <div id="appareils-fields" class="row not_display">
+                                        <div class="col">
+                                            <div id="filtre-appareils" class="row btn-group"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="ustensile-div" class="mt-2 col-2 pb-0 ms-2">
+                            <div id="ustensiles-button" class="row">
+                                <button id="ustensile-button-open" class="btn btn-danger py-3 filtre-div" onclick="openFilterDivs('Ustensile',2,4)">Ustensile <img class="ms-5" src="assets/icons/menu-closed.svg" alt="Open Menu"></button>
+                            </div>
+                            <div id="ustensiles-input" class="row not_display last_displayed">
+                                <div class="col bg-danger">
+                                    <div class="row bg-danger">
+                                        <div class="col-10 p-0">
+                                            <input id="ustensile-input" name="ustensile-input" type="text" class="bg-danger text-white py-3" placeholder="Rechercher un ustensile">
+                                        </div>
+                                        <div class="col-2 p-0">
+                                            <button id="ustensile-button-close" class="btn btn-danger py-3 filtre-open" onclick="closeFilterDivs('Ustensile',2,4)"><img src="assets/icons/menu-opened.svg" alt="Close Menu"></button>
+                                        </div>
+                                    </div>
+                                    <div id="ustensiles-fields" class="row not_display">
+                                        <div class="col me-0">
+                                            <div id="filtre-ustensiles" class="row btn-group"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>    
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="appareil-div" class="mt-2 col-2 pb-0">
-                <div id="row">
-                    <button id="appareils-button" class="btn btn-success py-3 filtre-div" onclick="openFilterDivs('Appareil',2,2)">Appareil <img class="ms-5" src="assets/icons/menu-closed.svg"></button>
-                    <div id="appareils-input" class="row not_display last_displayed">
-                        <div class="col-2 bg-success">
-                            <div class="row me-0 bg-success">
-                                <div class="col-10 p-0">
-                                    <input type="text" class="bg-success text-white py-3 filtre-open" placeholder="Rechercher un appareil">
-                                </div>
-                                <div class="col-2 p-0">
-                                    <button class="btn btn-success py-3 filtre-open" onclick="closeFilterDivs('Appareil',2,2)"><img src="assets/icons/menu-opened.svg"></button>
-                                </div>
-                            </div>
-                            <div id="appareils-fields" class="row not_display">
-                                <div class="col">
-                                    <div id="filtre-appareils" class="row btn-group"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="ustensile-div" class="mt-2 col-2 pb-0">
-                <button id="ustensiles-button" class="btn btn-danger py-3 filtre-div" onclick="openFilterDivs('Ustensile',2,4)">Ustensile <img class="ms-5" src="assets/icons/menu-closed.svg"></button>
-                <div id="ustensiles-input" class="row not_display last_displayed">
-                    <div class="col-4 bg-danger">
-                        <div class="row bg-danger">
-                            <div class="col-10 p-0">
-                                <input type="text" class="bg-danger text-white py-3" placeholder="Rechercher un ustensile">
-                            </div>
-                            <div class="col-2 p-0">
-                                <button class="btn btn-danger py-3 filtre-open" onclick="closeFilterDivs('Ustensile',2,4)"><img src="assets/icons/menu-opened.svg"></button>
-                            </div>
-                        </div>
-                        <div id="ustensiles-fields" class="row not_display">
-                            <div class="col me-0">
-                                <div id="filtre-ustensiles" class="row btn-group"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>    
             </div>
         </div>
 
         <!-- Les recettes -->
-        <div id="recipes" class="row">
+        <div id="recipes" class="row mt-5">
         </div>
     </div>
 
