Correction html + extraction mainsearch cause jsbench

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-        <div id="header" class="row">
+        <div id="header" class="row mt-4">
             <img src="assets/logo.svg" width="50" height="46" alt="Logo">
             <h1 class="text-center">Les petits plats</h1>
         </div>
@@ -36,10 +36,6 @@
         <!--Tags -->
         <div class="row">
             <div id="tags" class="tag"></div>
-
-            <!-- <div id="ingredient-tags" class="col-3"></div>
-            <div id="appareil-tags" class="col-3"></div>
-            <div id="ustensile-tags" class="col-3"></div> -->
         </div>
         
         <!-- filtres -->
@@ -142,6 +138,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!-- App JS -->
     <script src="scripts/utils/utils.js"></script>
+    <script src="scripts/utils/mainSearch.js"></script>
     <script src="scripts/datas/recipes.js"></script>
     <script src="scripts/components/recipeCard.js"></script>
     <script src="scripts/components/tagManager.js"></script>
