--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="lost_displayed">
                     <div class="row w-75">
-                        <div id="ingredient-div" class="mt-2 col-2 pb-0 me-2">
+                        <div id="ingredient-div" class="mt-2 col-2 pb-0 me-3">
                             <div id="ingredients-button" class="row">
                                 <button id="ingredient-button-open" class="btn btn-primary py-3 filtre-div">Ingrédient <img class="ms-5" src="assets/icons/menu-closed.svg" alt="Open Menu"></button>
                             </div>
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="appareil-div" class="mt-2 col-2 pb-0 mx-2">
+                        <div id="appareil-div" class="mt-2 col-2 pb-0 me-3">
                             <div id="appareils-button" class="row">
                                 <button id="appareil-button-open" class="btn btn-success py-3 filtre-div">Appareil <img class="ms-5" src="assets/icons/menu-closed.svg" alt="Open Menu"></button>
                             </div>
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="ustensile-div" class="mt-2 col-2 pb-0 ms-2">
+                        <div id="ustensile-div" class="mt-2 col-2 pb-0 me-3">
                             <div id="ustensiles-button" class="row">
                                 <button id="ustensile-button-open" class="btn btn-danger py-3 filtre-div">Ustensile <img class="ms-5" src="assets/icons/menu-closed.svg" alt="Open Menu"></button>
                             </div>
