Message any recipe - logo - any console.log

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
+    <link rel="icon" href="assets/logo.svg" sizes="any" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Lato:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
@@ -128,7 +128,15 @@
         </div>
 
         <!-- Les recettes -->
-        <div id="recipes" class="row mt-5">
+        <div id="recipes" class="row my-5">
+        </div>
+
+        <!-- Message si aucune recette -->
+        <div id="anyrecipe" class="row m-5 d-none">
+            <div class="col">
+                <span>Aucune recette ne correspond à votre critère… vous pouvez
+                    chercher « tarte aux pommes », « poisson », etc.</span>
+            </div>
         </div>
     </div>
 
